Wed Jun 28 13:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/typeprefix.idl:
          New file with small example of IDL construct with typeprefix
          that fails to compile when TAO_IDL is build with Intel C++
          and Sun C++ at this moment. Changing the forward declared
          interface B to a real interface makes it compiling, no idea
          what happens and why this only fails with the mentioned
          compilers

        * tests/IDL_Test/IDL_Test.mpc:
          Added new file

Wed Jun 28 12:45:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * utils/nslist/nslist.cpp:
          Fix overzellous VuWorks renaming of variables from last fix.

Wed Jun 28 11:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/LoadBalancer/LoadManager.cpp:
          When we can't register the signal handler, use ACE_ERROR_RETURN
          so that it is visible from the test output why things fail.

Wed Jun 28 09:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Use false instead of 0 for a bool

Wed Jun 28 09:51:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.h:
          Removed commented out method

        * tao/Profile.cpp:
          Compilation fix for CORBA/e micro

Wed Jun 28 09:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/tao.mpc:
          Added base projects for corba/e and minimum corba

Wed Jun 28 08:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * utils/nslist/nsadd.cpp:
        * utils/nslist/nslist.cpp:
          Fix minor compiler warnings. Anoying cut and paste
          ; subsitution for a , in nsadd.cpp.

Wed Jun 28 06:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.mpc:
          Removed not needed libpaths and added messaging as base project
          so that we are sure we build this exe after messaging
