@@ -1,3 +1,8 @@
+Wed Jun 28 15:23:37 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * docs/libraries.html:
+          Added text describing the new TAO_EndpointPolicy library.
+
 Wed Jun 28 13:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/typeprefix.idl:
